# taoli5.1

./: .gitignore  387-API-REALITY-CHECK-REPORT.md  5.1套利系统API统一方案与缺失接口深度分析_交易员开发视角.md  5.1系统API统一网关技术文档.md  5.1系统前端完整对接完成报告.md  CODE_STATISTICS_VERIFICATION.md  Cargo.toml  DEPLOYMENT_PACKAGE.md  FINAL_UPLOAD_VERIFICATION.md  FPGA_Complete_Implementation_Plan.md  MISSING_CONTENT_ANALYSIS.md  P0-P1-P2问题解决完成度最终报告.md  P1-P2问题解决完成度修正报告.md  QUICK_START_GUIDE.md  README-CLI.md  README.md  REAL-API-TEST-REPORT.md  SYSTEM_ANALYSIS_REPORT.md  api-test-report.json  arbitrage-cli-controller.py  arbitrage_results_1757562658.json  arbitrage_results_1757563119.json  arbitrage_results_1757563702.json  arbitrage_results_1757563737.json  arbitrage_results_1757563847.json  auto-service-manager.sh  aws_optimized_client.py  aws_realistic_optimization.md  batch-maintenance.yaml  batch-operations.py  batch-report-20250910-130604.json  batch-report-20250910-134024.json  batch-startup.yaml  btc-usdt-analysis.yaml  btc-usdt-triangular-analysis.py  btc_usdt_triangular_analysis_20250910_134215.json  build_system.sh  check_system_status.sh  deploy_to_github.sh  detailed-api-verification-report.json  (+35 more)
5.1系统/: 5.1套利系统387个API接口与统一网关100%适配性检查报告.md  Cargo.toml  build_all_services.sh  comprehensive_test.py  monitor_services.sh  start_all_services.sh  start_all_services_fixed.sh  stop_all_services.sh  test_50_symbols.json  test_frontend_integration.py  verify_fixes.sh
5.1系统/ai-model-service/: Cargo.toml
5.1系统/ai-model-service/src/: main.rs  main.rs.backup  main.rs.bak  models.rs  services.rs
5.1系统/api-validation-suite/: Cargo.toml  README.md
5.1系统/api-validation-suite/reports/: api_validation_report.html
5.1系统/api-validation-suite/src/: main.rs
5.1系统/architecture/: Cargo.toml
5.1系统/architecture/examples/: runtime_enforcement_demo.rs
5.1系统/architecture/src/: enforcement_integration.rs  errors.rs  lib.rs  runtime_enforcement.rs  system_config.rs  types.rs
5.1系统/celue/: CELUE_STRATEGY_MODULE_COMPLETION_REPORT.md  CONFIG_README.md  Cargo.toml  Cargo.toml.backup  add_brace.py  advanced_strategy_test.py  check_arbitrage_status.sh  cleanup_duplicates.py  complete_fix.py  complete_integration_test.py  comprehensive_fix.py  comprehensive_surgical_fix.py  direct_high_perf_test.py  final_cleanup.py  final_fix.py  fix_all_duplicates.py  fix_all_errors.py  fix_arbitrage_system.sh  fix_brace.py  fix_dependencies.py  fix_depth_analysis.sh  fix_duplicates.py  fix_exchange_filter.py  fix_final_errors.py  fix_optimization_errors.py  fix_orchestrator.sh  fix_orchestrator_v2.sh  fix_remaining_duplicates.py  fix_warnings.py  integration_test_results_20250817_151548.json  integration_test_results_20250817_152102.json  integration_test_results_20250817_152424.json  monitor_arbitrage.sh  performance_optimization_implementation.py  performance_optimization_simple.py  performance_optimization_test.py  performance_optimized_strategy.py  quick_error_fix.py  quick_fix_arbitrage.py  quick_optimization_verify.py  (+13 more)
5.1系统/celue/.cargo/: config.toml
5.1系统/celue/adapters/: Cargo.toml
5.1系统/celue/benches/: detect_bench.rs
5.1系统/celue/common/: Cargo.toml
5.1系统/celue/config/: arbitrage_monitor_config.toml  celue.env.example  deployment_config.toml  performance_config.toml  runtime_config.toml  strategy_config.toml  test_config.toml
5.1系统/celue/configs/: strategy.toml
5.1系统/celue/orchestrator/: Cargo.toml
5.1系统/celue/scripts/: config_manager.py
5.1系统/celue/shadow_trading/: Cargo.toml
5.1系统/celue/src/: lib.rs
5.1系统/celue/strategy/: Cargo.toml
5.1系统/celue/tests/: integration_tests.rs
5.1系统/cleaning-service/: Cargo.toml  test_performance  test_performance.rs
5.1系统/cleaning-service/src/: main.rs  models.rs  services.rs
5.1系统/common_types/: Cargo.toml
5.1系统/common_types/src/: config.rs  config_migration.rs  lib.rs
5.1系统/comprehensive_frontend_backend_test/: Cargo.toml
5.1系统/comprehensive_frontend_backend_test/src/: api_tests.rs  compatibility_tests.rs  frontend_types.rs  lib.rs  main.rs  websocket_tests.rs
5.1系统/config/: advanced_modules.toml  binance_triangular_config.toml  cleaning_system.toml  minimal.toml  production_system.toml  system.toml  system_limits.toml  test_50_coins.toml  test_system.toml
5.1系统/config-service/: Cargo.toml
5.1系统/config-service/src/: main.rs  models.rs  (+1 more)
5.1系统/frontend/: .env  .env.example  .env.local  .eslintrc.js  5.1套利系统技术文档.md  5.1系统后端架构开发总结文档.md  DEPLOYMENT_GUIDE.md  FINAL-COMPREHENSIVE-TEST-REPORT.md  FRONTEND_DEPLOYMENT.md  analyze-startup-issue.js  api-stability-monitor.js  check-strategy-page.js  check-system-status.js  check-trading-page.js  comprehensive-api-test.js  comprehensive-page-test.js  debug-cleaning-page.js  debug-frontend.cjs  debug-system-page.js  detailed-issue-analysis.js  diagnose-white-screen.js  endpoint-verification.cjs  final-project-acceptance-report.md  final-verification-test.js  frontend-api-test-report.json  health-check-test.cjs  index.html  package-lock.json  package.json  page-functionality-test-report.json  playwright-debug.js  realtime-system-debug.js  simple-cleaning-test.js  start-frontend.sh  tailwind.config.js  test-api-integration.cjs  test-cleaning-module.js  test-cleaning-page-mcp.js  test-complete-system-control.js  test-new-system-control.js  (+8 more)
5.1系统/frontend-sdk/: .eslintrc.js  README.md  package.json  tsconfig.json
5.1系统/integration-tests/: Cargo.toml
5.1系统/jiagou/: .env.example  Cargo.toml
5.1系统/logging-service/: Cargo.toml
5.1系统/performance-service/: Cargo.toml
5.1系统/qingxi/: .gitignore  Cargo.toml
5.1系统/rizhi/: 开发进展报告-2025-09-04.md
5.1系统/scripts/: deploy-systemd.sh  setup_binance_triangular.sh
5.1系统/src/: api_compatibility_test.rs  api_gateway.rs  auth_server.rs  main.rs  systemd_controller.rs  test_config_center.rs
5.1系统/strategy-service/: Cargo.toml
5.1系统/systemd/: arbitrage-system.service
5.1系统/test_compatibility/: Cargo.toml
5.1系统/trading-service/: Cargo.toml
5.1系统/unified-gateway/: Cargo.toml
5.1系统/unified_config/: Cargo.toml
ultra-latency/: Cargo.toml
ultra-latency/src/: main.rs
(+1039 files in other folders)
