[package]
name = "ultra-low-latency-arbitrage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ultra_latency_test"
path = "ultra_low_latency_order_system.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
bytes = "1.0"
crossbeam = "0.8"
parking_lot = "0.12"
ahash = "0.8"
once_cell = "1.0"
socket2 = "0.5"
crc32fast = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# 性能优化依赖
mimalloc = { version = "0.1", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-cpu=native"]