[workspace]
members = [
    "qingxi",
    "celue",
    "jiagou",
    "ultra-latency",
    "celue/adapters",
    "celue/common",
    "celue/orchestrator",
    "celue/strategy",
    "celue/vendor/nuid",
]

[workspace.package]
version = "5.1.0"
edition = "2021"
authors = ["5.1 Arbitrage System Team"]
license = "MIT"
repository = "https://github.com/ming198921/taoli5.1"

[workspace.dependencies]
# 核心依赖
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# 网络和WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"
socket2 = { version = "0.5", features = ["all"] }

# 高性能数据结构
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
nohash-hasher = "0.2"

# 数值计算和序列化
rust_decimal = { version = "1.33", features = ["serde-json"] }
bytemuck = "1.14"

# 日志和追踪
tracing = "0.1"
tracing-subscriber = "0.3"

# 异步运行时
async-trait = "0.1"

# HTTP服务器
warp = "0.3"
axum = "0.7"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1