[package]
name = "arbitrage-system-51"
version = "5.1.0"
edition = "2021"
authors = ["5.1 System Team"]
description = "高频虚拟货币套利系统5.1++"

[[bin]]
name = "arbitrage-system"
path = "src/main.rs"

[[bin]]
name = "test-config-center"
path = "src/test_config_center.rs"

[[bin]]
name = "web-api-server"
path = "src/bin/web_api_server.rs"

[workspace]
resolver = "2"

members = [
    # 统一类型定义模块 (最高优先级)
    "common_types",
    
    # QingXi 数据处理模块
    "qingxi/qingxi",
    
    # CeLue 策略模块
    "celue/orchestrator",
    "celue/adapters", 
    "celue/common",
    "celue/strategy",
    
    # 架构模块
    "architecture",
    
    # 集成测试
    "integration-tests",
    
    # 前后端数据互通测试
    "comprehensive_frontend_backend_test",
    "unified-gateway",
]

# 排除不需要构建的目录
exclude = [
    "qingxi/target",
    "celue/target",
    "**/target",
]

# 统一依赖版本管理
[workspace.dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"
futures = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"
toml = "0.8"
bincode = "1.3"
rmp-serde = "1.1"

# NATS消息队列
async-nats = "0.33"

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
bytes = "1.5"
url = "2.4"

# WebSocket
tungstenite = "0.21"
tokio-tungstenite = "0.21"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 实用工具
uuid = { version = "1.6", features = ["v4", "serde"] }
config = "0.13"
once_cell = "1.19"
lazy_static = "1.4"

# 高性能同步原语
parking_lot = "0.12"
crossbeam = "0.8"

# 数值计算
ndarray = "0.15"
ndarray-stats = "0.5"
ndarray-rand = "0.14"
num-traits = "0.2"
statrs = "0.16"

# 机器学习
smartcore = "0.3"
linfa = "0.7"
linfa-trees = "0.7"

# 加密和哈希
blake3 = "1.5"
sha2 = "0.10"

# 压缩
zstd = "0.13"
flate2 = "1.0"

# 内存管理和性能优化
aligned-vec = "0.5"
bytemuck = { version = "1.14", features = ["derive"] }
rayon = "1.8"
cpu-time = "1.0"
libc = "0.2"
bumpalo = "3.14"
mimalloc = { version = "0.1", default-features = false }

# SIMD优化
simdeez = "1.0"
wide = "0.7"
safe_arch = { version = "0.7", features = ["bytemuck"] }

# 监控和指标
metrics = "0.23"
prometheus = "0.13"

# 文件监控
notify = "6.1"

# 命令行
clap = "4.4"

# 终端颜色
colored = "2.0"

# 随机数
rand = "0.8"
fastrand = "2.0"

# 网络和TLS
native-tls = "0.2"
tokio-native-tls = "0.3"
rustls = "0.21"
tokio-rustls = "0.24"

# 其他常用依赖
regex = "1.10"
walkdir = "2.4"

# 优化配置
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
# 启用更多优化标志
overflow-checks = false
debug-assertions = false

# 开发配置
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

# 超高频处理配置
[profile.ultra]
inherits = "release"
opt-level = 3
lto = "fat" 
codegen-units = 1
panic = "abort"

# 主系统包依赖
[dependencies]
# 统一类型定义 (最高优先级)
common_types = { path = "common_types" }

# 系统核心依赖
arbitrage-architecture = { path = "architecture" }
market_data_module = { path = "qingxi/qingxi" }
orchestrator = { path = "celue/orchestrator" }
strategy = { path = "celue/strategy" }
adapters = { path = "celue/adapters" }
common = { path = "celue/common" }

# 异步运行时
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }

# 配置
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

# 认证服务器依赖
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
socketioxide = "0.13"
chrono = { workspace = true }
lazy_static = "1.4"
async-trait = "0.1"