[package]
name = "api-validation-suite"
version = "1.0.0"
edition = "2021"
description = "严谨的387个API接口完整性验证测试套件"

[workspace]

[[bin]]
name = "api-validator"
path = "src/main.rs"

[dependencies]
# HTTP客户端和WebSocket
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-tungstenite = "0.20"
tokio = { version = "1.35", features = ["full"] }

# 序列化和JSON处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 测试和断言
criterion = "0.5"
uuid = { version = "1.6", features = ["v4"] }

# 日志和错误处理
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 异步流和并发
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"

# 配置和CLI
clap = { version = "4.4", features = ["derive"] }
config = "0.13"

# 数据分析和统计
statrs = "0.16"

# 数据库(可选，用于存储测试结果)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"], optional = true }

[features]
default = []
database = ["sqlx"]