[workspace]
members = ["orchestrator", "adapters", "common", "strategy"]

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"  # 高性能JSON解析
toml = "0.8"
bincode = "1.3"
rmp-serde = "1.1"

# NATS消息队列
async-nats = "0.33"

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }
bytes = "1.5"
url = "2.4"

# 压缩
zstd = "0.13"

# WebSocket
tungstenite = "0.21"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 其他工具
uuid = { version = "1.6", features = ["v4", "serde"] }
config = "0.13"

# 高性能同步原语
parking_lot = "0.12"

# 文件监控
notify = "6.1"

# 命令行
clap = "4.4"

# 哈希
blake3 = "1.5"

# 终端颜色
colored = "2.0"

# 数值计算
ndarray = "0.15"
ndarray-stats = "0.5"
ndarray-rand = "0.14"
num-traits = "0.2"
statrs = "0.16"

# 机器学习
smartcore = "0.3"
linfa = "0.7"
linfa-trees = "0.7"

# 压缩和序列化增强
flate2 = "1.0"
sha2 = "0.10"

# 新增：超高频处理依赖
crossbeam = "0.8"              # 无锁数据结构
aligned-vec = "0.5"            # 内存对齐向量
bytemuck = { version = "1.14", features = ["derive"] }              # 安全类型转换
rayon = "1.8"                  # 数据并行
cpu-time = "1.0"               # CPU时间测量
libc = "0.2"                   # 系统调用（CPU亲和性）

# SIMD优化
simdeez = "1.0"                # SIMD抽象
wide = "0.7"                   # SIMD类型

# 内存管理
bumpalo = "3.14"               # Bump分配器
mimalloc = { version = "0.1", default-features = false } # 高性能内存分配器
# 修复缺失的依赖
futures = "0.3"
metrics = "0.23"
prometheus = "0.13"
rand = "0.8"
lazy_static = "1.4"  # 静态变量初始化


[package]
name = "celue"
version = "0.1.0"
edition = "2021"

[dependencies]
# 使用工作区依赖
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bincode = { workspace = true }
rmp-serde = { workspace = true }
async-nats = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
zstd = { workspace = true }
tungstenite = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
parking_lot = { workspace = true }
notify = { workspace = true }
clap = { workspace = true }
blake3 = { workspace = true }
colored = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
ndarray-rand = { workspace = true }
num-traits = { workspace = true }
statrs = { workspace = true }
smartcore = { workspace = true }
crossbeam = { workspace = true }
aligned-vec = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
rayon = { workspace = true }
cpu-time = { workspace = true }
libc = { workspace = true }
simdeez = { workspace = true }
wide = { workspace = true }
bumpalo = { workspace = true }
mimalloc = { workspace = true }

# 项目内部模块
orchestrator = { path = "orchestrator" }
adapters = { path = "adapters" }
common = { path = "common" }
strategy = { path = "strategy" }

# 统一类型系统
arbitrage-architecture = { path = "../architecture" }
common_types = { path = "../common_types" }

[[bin]]
name = "arbitrage_monitor"
path = "src/bin/arbitrage_monitor.rs"

[[bin]]
name = "arbitrage_monitor_simple"
path = "src/bin/arbitrage_monitor_simple.rs"

# arbitrage_monitor_ultra - 已删除，使用arbitrage_monitor_simple替代

[[bin]]
name = "test_compile"
path = "src/bin/test_compile.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# 特殊优化配置文件 - 超高频处理
[profile.ultra]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
# 启用特定CPU特性优化
[target.'cfg(target_arch = "x86_64")'.dependencies]
# AVX-512支持将通过cfg特性检测
safe_arch = { version = "0.7", features = ["bytemuck"] }
