[package]
name = "common_types"
version = "0.1.0"
edition = "2021"
description = "统一的数据类型定义，确保前后端完美互通"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
num_cpus = "1.16"

[dev-dependencies]
tokio-test = "0.4"