[package]
name = "comprehensive_frontend_backend_test"
version = "0.1.0"
edition = "2021"
description = "全面的5.1套利系统前后端数据互通测试"

[dependencies]
common_types = { path = "../common_types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
colored = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"