[package]
name = "integration-tests"
version = "5.1.0"
edition = "2021"

[[bin]]
name = "system_integration_test"
path = "src/main.rs"

[dependencies]
# 工作空间依赖
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 本地包依赖
market_data_module = { path = "../qingxi/qingxi" }
strategy = { path = "../celue/strategy" }
adapters = { path = "../celue/adapters" }
common = { path = "../celue/common" }
orchestrator = { path = "../celue/orchestrator" }
arbitrage-architecture = { path = "../architecture" } 