[package]
name = "logging-service"
version = "1.0.0"
edition = "2021"

[workspace]

[[bin]]
name = "logging-service"
path = "src/main.rs"

[dependencies]
# Web框架
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "streams"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 工具
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"

# 配置
config = "0.13"
dotenv = "0.15"