[workspace]

[package]
name = "trading-service"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "trading-service"
path = "src/main.rs"

[dependencies]
# Web框架
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 网络
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# 配置
config = "0.13"

# 数学计算
rust_decimal = { version = "1.32", features = ["serde"] }

# 加密和签名
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"