[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["Strategy Team"]
description = "High-performance arbitrage orchestrator"

[[bin]]
name = "celue-orchestrator"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
common = { path = "../common" }
adapters = { path = "../adapters" }
tokio = { workspace = true }
async-trait = { workspace = true }
# futures = { workspace = true }  # 不在workspace中定义
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
parking_lot = { workspace = true }
async-nats = { workspace = true }
toml = { workspace = true }

# Additional dependencies
metrics = "0.21"
notify = "6.1"
strategy = { path = "../strategy" }
blake3 = "1.5"

[dev-dependencies]
tokio-test = "0.4"

