[package]
name = "shadow_trading"
version = "0.1.0"
edition = "2021"
authors = ["5.1系统开发团队"]
description = "高频套利交易系统 - 影子模式交易引擎"
license = "MIT"
readme = "README.md"

[lib]
name = "shadow_trading"
path = "src/lib.rs"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-futures = "0.2"

# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 随机数
rand = "0.8"

# 正则表达式
regex = "1.0"

# 指标收集
prometheus = "0.13"

# HTTP客户端（用于推送指标）
reqwest = { version = "0.11", features = ["json"] }

# 停车锁（用于高性能并发）
parking_lot = "0.12"

# 数学库
num-traits = "0.2"
statrs = "0.16"

# 数据结构
indexmap = "2.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["full"]
full = ["metrics", "risk-management", "performance-analysis"]
metrics = []
risk-management = []
performance-analysis = []
testing = []

[[bench]]
name = "shadow_trading_benchmarks"
harness = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.test]
opt-level = 1
debug = true

[profile.bench]
opt-level = 3
debug = false
lto = true