[package]
name = "strategy"
version = "5.1.0"
edition = "2021"

[dependencies]
# 统一类型定义 (最高优先级)
common_types = { path = "../../common_types" }

common = { path = "../common" }
adapters = { path = "../adapters" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
petgraph = "0.6"
rayon = "1.8"
regex = "1.10"
ordered-float = "4.2"
parking_lot = "0.12"
itertools = "0.13"
lazy_static.workspace = true
toml = "0.8"
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
arbitrage-architecture = { path = "../../architecture" }

[dev-dependencies]
tokio = { version = "1.35", features = ["rt", "macros"] }
hdrhistogram = "7"
num_cpus = "1.16"
crossbeam = "0.8"
toml = "0.8"
