[package]
name = "strategy"
version = "5.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
adapters = { path = "../adapters" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
petgraph = "0.6"
rayon = "1.8"
regex = "1.10"
ordered-float = "4.2"
parking_lot = "0.12"
itertools = "0.13"
lazy_static.workspace = true
toml = "0.8"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt", "macros"] }
hdrhistogram = "7"
num_cpus = "1.16"
crossbeam = "0.8"
toml = "0.8"
